# upqc-lab

./: .gitmodules  AGENTS.md  README.md
components/liboqs_mlkem/: CMakeLists.txt  LICENSE.txt  README.md  deploy_src.sh
components/liboqs_mlkem/examples/custom_pqc_channel/: CMakeLists.txt  sdkconfig.defaults
components/liboqs_mlkem/examples/custom_pqc_channel/main/: CMakeLists.txt  custom_pqc_channel.c  idf_component.yml
components/liboqs_mlkem/examples/simple/main/: CMakeLists.txt  simple.c
components/liboqs_mlkem/include/: upqc_config.h
components/liboqs_mlkem/tests/performance/: CMakeLists.txt  README.md
components/liboqs_mlkem/tests/performance/main/: CMakeLists.txt  idf_component.yml  performance.c
docs/: README.md  presentation.md  research1.md  research2.md  research3.md
examples/: README.md
examples/host/: CMakeLists.txt  README.md  client.c  crypto_backend.h  crypto_backend_custom_pqc.c  crypto_primitives.h  crypto_primitives_mbedtls.c  crypto_primitives_openssl.c  example.md  mbedtls_migration_plan.md  plan.md  server.c
examples/shared/: upqc_config.h
hybrid/: 0001-feat-mlkem-Add-initial-support-for-ml-kem.patch  0001-feat-tls1.3-Support-for-X25519MLKEM768.patch  PLAN.md  README.md
hybrid/linux_server/: X25519MLKEM768_Implementation_Guide.md
hybrid/mcp/: README.md  cursor_mcp_config.json  fast_server.py  run.sh  run_client.sh  run_server.sh  test_mcp.py
hybrid/target_client/: LOCALHOST_TESTING.md  README.md  capture.txt  openssl_server.sh  sdkconfig.defaults  sdkconfig.defaults.esp32  test_server.py  tls_server.py
hybrid/target_client/components/mlkem768_temp/: CMakeLists.txt  mlkem768.c  oqsconfig.h  randombytes.c
hybrid/target_client/components/mlkem768_temp/include/: mlkem768.h
hybrid/target_client/components/mlkem768_temp/include/oqs/: oqsconfig.h
hybrid/target_client/main/: https_mbedtls_example_main.c
impl/: README.md
